# atlas-tdd-november-2022

./: README.md
LoggerProjekt/: LoggerProjekt.sln
LoggerProjekt/LoggerProjekt/: Appender.h  ConsolenAppender.cpp  ConsolenAppender.h  Logger.h  LoggerProjekt.cpp  LoggerProjekt.vcxproj  LoggerProjekt.vcxproj.filters
PersonenServiceProjekt/: CMakeLists.txt
PersonenServiceProjekt/source/persistence/: person.h  personen_repository.h
PersonenServiceProjekt/source/services/: blacklist_service.h  personen_service_impl.h
PersonenServiceProjekt/tests/: CMakeLists.txt  Mockblacklist_service.h  Mockpersonen_repository.h  personen_service_impl_test.cpp  personen_service_impl_test.h
QTEuro2DollarRechner/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui
QTEuro2DollarRechner/presenter/: euro_to_dollar_presenter.h  euro_to_dollar_presenter_impl.h
QTEuro2DollarRechner/tests/: CMakeLists.txt  Mockeuro_to_dollar_calculator.h  Mockeuro_to_dollar_view.h  Mockexchange_rate_service.h  euro_to_dollar_calculator_impl_test.cpp  euro_to_dollar_calculator_impl_test.h  euro_to_dollar_presenter_impl_test.cpp  euro_to_dollar_presenter_impl_test.h
SchweinProjekt/: CMakeLists.txt
SchweinProjekt/source/: calculator.h  calculator_impl.h  clac_client.h  main.cpp  schwein.h  stapel.h
SchweinProjekt/tests/: CMakeLists.txt  Mockcalculator.h  calc_client_test.cpp  calc_client_test.h  stapel_test..cpp  stapel_test.h
Tag1_01StapelProjekt/: Tag1_01StapelProjekt.sln
Tag1_01StapelProjekt/Tag1_01StapelProjekt/: Tag1_01StapelProjekt.vcxproj  Tag1_01StapelProjekt.vcxproj.filters  stapel.cpp  stapel.h  stapel_exception.h
Tag1_01StapelProjekt/Tag1_01StapelProjektTest/: Tag1_01StapelProjektTest.vcxproj  packages.config
Tag1_02StapelMitCMake/: CMakeLists.txt
Tag1_02StapelMitCMake/source/: stapel.cpp  stapel.h  stapel_exception.h
Tag1_02StapelMitCMake/tests/: CMakeLists.txt  stapel_test.cpp  stapel_test.h  test.cpp
TakeGameProject/source/games/: abstract_game.h
TakeGameProject/tests/: CMakeLists.txt  abstract_game_test.cpp  abstract_game_test.h  computer_player_test.cpp  computer_player_test.h
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-0363a648668f14217ccb.json  cmakeFiles-v1-f08e7504ad0d830f9a5f.json  codemodel-v2-3bf9c1b51207ce7d7377.json  directory-tests.google.googlemock-Debug-d351722b5c5b0382eb78.json  directory-tests.google.googletest-Debug-6a271c8fcd8911e5e829.json  index-2022-11-30T07-05-19-0675.json  target-Euro2Dollar-Debug-f9af8b7656e1376e65fa.json  target-Euro2DollarTest-Debug-f1598bbfd2c769ebea5e.json  target-Euro2DollarTest_autogen-Debug-37e5b1cd455cb1ab3595.json  target-Euro2DollarTest_autogen_timestamp_deps-Debug-a9dc836e820fc7f3f1bc.json  target-Euro2Dollar_autogen-Debug-d704b0fed2642e494308.json  target-Euro2Dollar_autogen_timestamp_deps-Debug-f85f615a50c51d2dfe23.json  (+12 more)
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/Euro2Dollar_autogen/: deps
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/Euro2Dollar_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/Euro2Dollar_autogen/include/: ui_mainwindow.h
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/tests/: cmake_install.cmake
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/tests/Euro2DollarTest_autogen/: deps
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/tests/google/: CTestTestfile.cmake  cmake_install.cmake
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/tests/google/googlemock/: CTestTestfile.cmake  cmake_install.cmake
build-QTEuro2DollarRechner-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/tests/google/googletest/: CTestTestfile.cmake  cmake_install.cmake
(+2 files in other folders)
